--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     </title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico" />
+    <link rel="icon" type="image/jpeg" sizes="32x16" href="static/images/karunyalogo.jpeg">
 
     <!-- bootstrap.min css -->
     <link rel="stylesheet" href="static/plugins/bootstrap/css/bootstrap.min.css" />
@@ -28,6 +28,7 @@
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 
   </head>
 
