--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -31,11 +31,11 @@
         </div>
       </div>
 
-      <div class="col-12 text-center mb-5">
+      {% comment %} <div class="col-12 text-center mb-5">
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
           <label class="btn active"><input type="radio" name="shuffle-filter" value="all" checked="checked" />All Specialties</label>
         </div>
-      </div>
+      </div> {% endcomment %}
 
       <div class="row shuffle-wrapper portfolio-gallery">
         <div class="col-lg-3 col-sm-6 col-md-6 mb-4 shuffle-item" data-groups='["cat1"]'>
