--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 
             <div class="feature-item mb-5 mb-lg-0">
               <div class="feature-icon mb-4">
-                <i class="icofont-ui-clock"></i>
+                <i class="ri-time-line"></i>
               </div>
               <span>Working Hours</span>
               <ul class="w-hours list-unstyled">
@@ -55,7 +55,7 @@
 
             <div class="feature-item mb-5 mb-lg-0">
               <div class="feature-icon mb-4">
-                <i class="icofont-eye-alt"></i>
+                <i class="ri-eye-line"></i>
               </div>
               <span>24/7 Eye Care</span>
               <h4 class="mb-3">Book an Eye Checkup</h4>
@@ -65,7 +65,7 @@
 
             <div class="feature-item mb-5 mb-lg-0">
               <div class="feature-icon mb-4">
-                <i class="icofont-phone"></i>
+                <i class="ri-phone-line"></i>
               </div>
               <span>Emergency Eye Care</span>
               <h4 class="mb-3">Call: 1-800-555-OPTI</h4>
