--- a/templates/base.html
+++ b/templates/base.html
@@ -73,10 +73,10 @@
                 <a class="nav-link dropdown-toggle" href="services" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About Us <i class="icofont-thin-down"></i></a>
                 <ul class="dropdown-menu" aria-labelledby="dropdown01">
                   <li>
-                    <a class="dropdown-item" href="">About</a>
+                    <a class="dropdown-item" href="about">About</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="">Managements</a>
+                    <a class="dropdown-item" href="managements">Managements</a>
                   </li>
                 </ul>
               </li>
@@ -123,7 +123,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" href="contact">Contact</a>
+                <a class="nav-link" href="contactform">Contact</a>
               </li>
             </ul>
           </div>
