--- a/templates/contactform.html
+++ b/templates/contactform.html
@@ -8,15 +8,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="block text-center">
+        <div class="block text-left">
           <span class="text-white">Get in Touch</span>
           <h1 class="text-capitalize mb-5 text-lg">Contact Us</h1>
-
-          <!-- <ul class="list-inline breadcumb-nav">
-            <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
-            <li class="list-inline-item"><span class="text-white">/</span></li>
-            <li class="list-inline-item"><a href="#" class="text-white-50">Contact Us</a></li>
-          </ul> -->
         </div>
       </div>
     </div>
@@ -26,9 +20,9 @@
 
 <section class="contact-form-wrap section">
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-left">
             <div class="col-lg-6">
-                <div class="section-title text-center">
+                <div class="section-title text-left">
                     <h2 class="text-md mb-2">Get in Touch</h2>
                     <div class="divider mx-auto my-4"></div>
                     <p class="mb-5">Have questions about your eye health? Reach out to us for expert advice and consultations.</p>
