--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="block text-center">
+          <div class="block text-left">
             <span class="text-white">Our Gallery</span>
             <h1 class="text-capitalize mb-5 text-lg">Moments at Karunya Eye Hospital</h1>
           </div>
@@ -21,8 +21,8 @@
 
   <section class="section gallery">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-6 text-center">
+      <div class="row justify-content-left">
+        <div class="col-lg-6 text-left">
           <div class="section-title">
             <h2>Our Eye Hospital Journey</h2>
             <div class="divider mx-auto my-4"></div>
