--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="block text-center">
+          <div class="block text-left">
             <span class="text-white">About Us</span>
             <h1 class="text-capitalize mb-5 text-lg">About Us</h1>
           </div>
