--- a/templates/specialities.html
+++ b/templates/specialities.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="block text-center">
+          <div class="block text-left">
             <span class="text-white">Specialities</span>
             <h1 class="text-capitalize mb-5 text-lg">Specialities</h1>
           </div>
@@ -22,8 +22,8 @@
   <!-- Specialties Start -->
 <section class="section service gray-bg">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-7 text-center">
+      <div class="row justify-content-left">
+        <div class="col-lg-7 text-left">
           <div class="section-title">
             <h2>Our Specialities</h2> 
             <div class="divider mx-auto my-4"></div>
@@ -35,7 +35,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-item mb-4">
-            <div class="icon d-flex align-items-center">
+            <div class="icon d-flex align-items-left">
               <i class="icofont-eye text-lg"></i>
               <h4 class="mt-3 mb-3">General Ophthalmology</h4>
             </div>
