--- a/templates/base.html
+++ b/templates/base.html
@@ -142,7 +142,7 @@
         <div class="row">
           <div class="col-lg-4 mr-auto col-sm-6">
             <div class="widget mb-5 mb-lg-0">
-              <p>Providing world-class eye care with advanced technology and compassionate service to restore and enhance vision.</p>
+              <p>Providing world-class eye hospital with advanced technology and compassionate service to restore and enhance vision.</p>
               <ul class="list-inline footer-socials mt-4">
                 <li class="list-inline-item">
                   <a href="#"><i class="icofont-facebook"></i></a>
@@ -175,7 +175,7 @@
                   <a href="#">Glaucoma Treatment</a>
                 </li>
                 <li>
-                  <a href="#">Pediatric Eye Care</a>
+                  <a href="#">Pediatric Eye Hospital</a>
                 </li>
               </ul>
             </div>
@@ -231,7 +231,7 @@
           <div class="row align-items-center justify-content-between">
             <div class="col-lg-6">
               <div class="copyright">
-                &copy; Copyright Reserved to <span class="text-color">Karunya Eye Care Hospital.</span>
+                &copy; Copyright Reserved to <span class="text-color">Karunya Eye Hospital.</span>
                 <br>Designed and Developed by <b href="https://inspirezesttechnologies.com/">InspireZest Technologies</b>
               </div>
             </div>
