--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -12,7 +12,7 @@
         <div class="col-md-12">
           <div class="block text-left">
             <span class="text-white">Our Specialists</span>
-            <h1 class="text-capitalize mb-5 text-lg">Expert Eye Care Doctors</h1>
+            <h1 class="text-capitalize mb-5 text-lg">Expert Eye Hospital Doctors</h1>
           </div>
         </div>
       </div>
