--- a/templates/eyeproblem.html
+++ b/templates/eyeproblem.html
@@ -9,7 +9,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="block text-left">
-          <span class="text-white">Eye Care Services</span>
+          <span class="text-white">Eye Hospital Services</span>
           <h1 class="text-capitalize mb-5 text-lg">Eye Conditions & Treatments</h1>
         </div>
       </div>
