--- a/templates/services.html
+++ b/templates/services.html
@@ -74,10 +74,10 @@
 
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="service-block mb-5 mb-lg-0">
-            <img src="images/service/pediatric-eye-care.jpg" alt="Pediatric Eye Care" class="img-fluid" />
+            <img src="images/service/pediatric-eye-care.jpg" alt="Pediatric Eye hospital" class="img-fluid" />
             <div class="content">
-              <h4 class="mt-4 mb-2 title-color">Pediatric Eye Care</h4>
-              <p class="mb-4">Specialized eye care services for children to ensure healthy vision development.</p>
+              <h4 class="mt-4 mb-2 title-color">Pediatric Eye Hospital</h4>
+              <p class="mb-4">Specialized eye Hospital services for children to ensure healthy vision development.</p>
             </div>
           </div>
         </div>
@@ -91,13 +91,13 @@
         <div class="col-lg-7">
           <div class="cta-content">
             <div class="divider mb-4"></div>
-            <h2 class="mb-4 text-lg">Providing <span class="title-color">Exceptional Eye Care</span> for a Clearer Tomorrow</h2>
+            <h2 class="mb-4 text-lg">Providing <span class="title-color">Exceptional Eye Hospital</span> for a Clearer Tomorrow</h2>
             <p class="mb-4">Your vision is our priority. Book an appointment today with our expert ophthalmologists and take the first step towards healthier eyes.</p>
             <a href="appointment.html" class="btn btn-main-2 btn-round-full">Book an Appointment<i class="icofont-eye ml-2"></i></a>
           </div>
         </div>
         <div class="col-lg-5 text-center">
-          <img src="assets/images/eye-care-banner.jpg" alt="Eye Care" class="img-fluid rounded">
+          <img src="assets/images/eye-care-banner.jpg" alt="Eye hospital" class="img-fluid rounded">
         </div>
       </div>
     </div>
